docs: add CLAUDE.md navigation hub + review local skills
Thin CLAUDE.md pointing to knowledge.yaml (canonical agent-navigable
index) and kcp-skill (shared governed-skill authoring conventions);
local skills reviewed against current repo state, stale content fixed,
genuine gaps filled. Fable-verified before commit.